@@ -49,6 +49,7 @@ case ${JOB_TYPE} in
 test)
     echo "SUREFIRE_JVM_OPT: ${SUREFIRE_JVM_OPT}"
     retry_with_backoff 3 10 \
+    # adding -Dnet.bytebuddy.experimental=true to enable Java 21 testing 
       mvn test -B -ntp -Dclirr.skip=true -Denforcer.skip=true ${SUREFIRE_JVM_OPT} -Dnet.bytebuddy.experimental=true 
     RETURN_CODE=$?
     ;;
